Avoid dialogs moving offscreen when pasting long unbroken text strings
The width wasn't set on the paste target because of the referenced Chromium
bug. However, that bug is marked as fixed.

Throw in a few other paste target cleanup fixes that make sense.

Bug: T224923

--- a/src/ce/styles/ve.ce.Surface.css
+++ b/src/ce/styles/ve.ce.Surface.css
@@ -108,8 +108,8 @@
 	/* FIXME T126024: Stop the viewport scrolling when the paste target is typed into */
 	top: 3em;
 	left: 0;
-	/* Try to avoid wrapping by not setting a width because of https://code.google.com/p/chromium/issues/detail?id=318925 */
 	height: 1px;
+	width: 1px;
 	opacity: 0;
 	overflow: hidden;
 }
